@@ -1,3 +1,9 @@
+2004-10-20  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* gnu/java/awt/peer/ClasspathFontPeer.java
+	(setStandardAttributes(String,Map)): If size attribute doesn't
+	exist, default to size 12.  Clamp size value to a minimum of 1.
+
 2004-10-16  Jeroen Frijters  <jeroen@frijters.net>
 
 	* javax/swing/JDialog.java
